force-app/main/default/objects/Pipe_Benchmark__c/Pipe_Benchmark__c.object-meta.xml
<CustomObject>
    <label>Pipe Benchmark</label>
    <nameField>
        <displayFormat>PB-{0000000000}</displayFormat>
        <label>Pipe Benchmark Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pipe Benchmarks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>