force-app/main/default/objects/Pipe_Benchmark__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <inlineHelpText>enter the ordinal number of the month</inlineHelpText>
    <label>Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>