force-app/main/default/objects/Pipe_Benchmark__c/fields/Primary_Key__c.field-meta.xml
<CustomField>
    <fullName>Primary_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Primary Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>