force-app/main/default/objects/Pipe_Benchmark__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>Quarter__c</columns>
    <columns>Month__c</columns>
    <columns>Product__c</columns>
    <columns>Price__c</columns>
    <columns>Quote__c</columns>
    <columns>Region__c</columns>
    <columns>Source__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>